# cpputils

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
src/: CMakeLists.txt
src/include/: cpputils.hpp
src/include/cpputils/: cpputils.hpp
src/include/cpputils/functional/: composition.hpp  enumerate.hpp  expected.hpp  operator_sections.hpp  opt_ext.hpp  pipeable.hpp  tovector.hpp  utils.hpp  zip.hpp  zip_with.hpp
src/include/cpputils/internal/: adaptors.hpp
src/include/cpputils/meta/: traits.hpp  typelist.hpp
src/include/cpputils/misc/: benchmark.hpp  container_views.hpp  parsers.hpp  system_macros.hpp  visitor.hpp
src/include/cpputils/traits/: cpputils_concepts.hpp  is_specialization_of.hpp  typelist.hpp
src/include/cpputils/types/: lazy.hpp  number.hpp  optional_ref.hpp  quantities.hpp  quantity.hpp  static_string.hpp
src/include/functional/: enumerate.hpp  opt_ext.hpp  tovector.hpp  zip.hpp
src/include/functional/internal/: iter_utils.hpp
src/include/traits/: cpputils_concepts.hpp  is_specialization_of.hpp  typelist.hpp
src/include/types/: number.hpp
tests/: CMakeLists.txt  benchmark_test.cpp  composition_test.cpp  container_views_test.cpp  dummy.cpp  enumerate_test.cpp  expected_test.cpp  lazy_test.cpp  number_is_error_result_test.cpp  number_test.cpp  operator_sections_test.cpp  opt_ext_test.cpp  optional_ref_test.cpp  parser_test.cpp  pipeable_test.cpp  range_maker_test.cpp  test_utils.hpp  tovector_test.cpp  traits_test.cpp  typelist_test.cpp  zip_test.cpp  zip_with_test.cpp
